--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,17 @@ body {
   margin: 0;
   padding: 0;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.circle-button {
+  background-color: #006097;
+  border: 2px #6ff0c9 solid;
+  border-radius: 50%;
+  padding: 0;
+  position: absolute;
+  outline: none;
+}
